编程语言中的特性和语法 Overview

--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Programming Languages - Application and Interpretation by Shriram Krishnamurthi》/6 从替换模型到环境模型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Programming Languages - Application and Interpretation by Shriram Krishnamurthi》/6 从替换模型到环境模型.md
@@ -1,174 +1,103 @@
-
-
-### 6. 从替换模型到环境模型
-
-在解释器设计中，**替换模型**是一种直接但效率不高的方法，特别是在处理函数调用和标识符替换时。替换模型的主要问题包括：
-
-1. **遍历次数过多**：在替换模型中，解释器需要对源程序进行多次遍历——一次替换标识符，一次求值。这意味着即使在未执行的代码（如条件语句的未选中分支）中，替换过程也会进行。
-
-2. **效率低下**：由于替换模型要求对每个函数调用进行替换，它可能导致不必要的重复操作，尤其是在复杂的表达式中，这会影响程序的运行时间复杂性。
-
-3. **源代码依赖**：替换模型依赖于源代码的结构，需要保留完整的源代码进行替换和解释，而其他实现方式（如编译器）可能不需要这样做。
-
-### 替换模型的时间复杂性
-
-**替换模型确实会影响程序运行的时间复杂性**。在替换模型中，时间复杂性可能会因为需要多次遍历源代码而增加，尤其是在存在大量嵌套函数调用的情况下。每次替换都需要扫描整个表达式树，导致复杂的嵌套表达式可能产生指数级的时间增长。
-
-例如，考虑以下表达式的嵌套替换：
-
-```scheme
-(double (double (double x)))
-```
-
-在替换模型中，每个 `double` 函数都会对整个表达式进行一次替换操作。如果 `double` 函数再调用其他函数，替换操作的次数会迅速增加。
-
-### 引入环境模型
-
-为了克服替换模型的这些缺点，**环境模型**被提出。环境模型的基本思路是：
-
-1. **绑定与环境**：每个变量（标识符）不再通过替换操作找到其绑定值，而是通过一个环境（environment）来查找。环境是一个映射表，将变量名映射到它们的值或位置。
-  
-2. **按需求值**：在环境模型中，只有在需要时才访问变量的值。这避免了不必要的遍历和替换操作，提升了效率。
-
-3. **独立于源代码**：环境模型不需要源代码的具体结构来执行，它只需要维护变量和值之间的关系表，这使得它在不同实现方式下（如解释器、编译器）更具适应性。
-
-### 环境模型的核心思想
-
-在环境模型中，每次函数调用时，解释器会创建一个新的环境，将实际参数与形式参数进行绑定，并在这个新的环境中执行函数体。这种方法不需要在函数调用时对整个表达式进行替换，而是通过查询环境中的绑定来找到变量的值。
-
-例如，考虑如下环境模型的基本结构：
-
-```scheme
-(define empty-env '())  ;; 空环境
-
-(define (extend-env var val env)  ;; 扩展环境，将新的绑定添加到现有环境中
-  (cons (cons var val) env))
-
-(define (apply-env env var)  ;; 在环境中查找变量的值
-  (cond
-    [(null? env) (error "Unbound variable" var)]
-    [(equal? (caar env) var) (cdar env)]
-    [else (apply-env (cdr env) var)]))
-```
-
-### 使用环境模型的解释器
-
-在使用环境模型的解释器中，标识符的求值不再通过替换，而是通过查找环境来进行。例如：
-
-```scheme
-(define (interp [e : ExprC] [env : Env] [fds : (listof FunDefC)]) : number
-  (type-case ExprC e
-    [numC (n) n]  ;; 如果是数值常量，直接返回
-    [idC (s) (apply-env env s)]  ;; 查找标识符的值
-    [appC (f a)
-     (let ([fd (get-fundef f fds)])
-       (let ([arg-val (interp a env fds)])
-         (interp (fdC-body fd)
-                 (extend-env (fdC-arg fd) arg-val env)  ;; 扩展环境
-                 fds)))]
-    [plusC (l r) (+ (interp l env fds) (interp r env fds))]  ;; 递归求值加法
-    [multC (l r) (* (interp l env fds) (interp r env fds))]))  ;; 递归求值乘法
-```
-
-### 总结
-
-通过引入环境模型，我们可以有效地解决替换模型中的效率问题，并使解释器更加模块化和灵活。环境模型只在需要时才查找变量的值，避免了替换模型中的多次遍历，同时也不再依赖于源代码的结构。这种方法在现代编程语言的实现中广泛应用，是替换模型的合理替代。
+[toc]
 
 
 
----
 
-### 环境模型解释器的改进
 
-在替换模型解释器中，替换操作会带来效率问题和不必要的复杂性。环境模型通过使用环境（环境实际上是一个绑定变量名和对应值的字典）来推迟替换，解决了这些问题。
+### ------------------------------------
 
-然而，在环境模型中，我们也可能面临另一个问题：历史绑定的污染。每次函数调用都会扩展环境，增加新的绑定。这些绑定在后续的函数调用中可能会意外地影响新的函数求值。这正是我们在上面的 `f1` 和 `f2` 的例子中遇到的问题。
 
-### 正确的环境模型：为每个函数创建干净的环境
 
-为了确保每个函数调用使用的是一个干净的环境，而不是带有历史绑定的环境，我们在每次函数调用时只扩展一个新的空环境 (`mt-env`)，这样就避免了历史绑定的污染。这种方法重现了替换模型解释器的行为，并确保变量绑定的正确性。
+### ------------------------------------
 
-### 完整的环境模型解释器代码
 
-下面是根据环境模型改进后的解释器的完整代码：
 
-```scheme
-;; 定义 Binding 和 Env 数据类型
-(define-type Binding
-  [bind (name : symbol) (val : number)])
+### ------------------------------------
 
-(define-type-alias Env (listof Binding))
-(define mt-env empty)
-(define extend-env cons)
 
-;; 环境查找函数
-(define (lookup [for : symbol] [env : Env]) : number
-  (cond
-    [(empty? env) (error 'lookup "name not found")]  ;; 如果环境为空，抛出错误
-    [else (cond
-            [(symbol=? for (bind-name (first env)))  ;; 找到匹配的绑定
-             (bind-val (first env))]
-            [else (lookup for (rest env))])]  ;; 否则递归查找
-    ))
 
-;; 获取函数定义
-(define (get-fundef [n : symbol] [fds : (listof FunDefC)]) : FunDefC
-  (cond
-    [(empty? fds) (error 'get-fundef "reference to undefined function")]  ;; 引用未定义的函数
-    [(cons? fds) 
-     (cond
-       [(equal? n (fdC-name (first fds))) (first fds)]  ;; 找到函数定义，返回
-       [else (get-fundef n (rest fds))])]))  ;; 递归查找
 
-;; 解释器的实现
-(define (interp [expr : ExprC] [env : Env] [fds : (listof FunDefC)]) : number
-  (type-case ExprC expr
-    [numC (n) n]  ;; 直接返回数值
-    [idC (n) (lookup n env)]  ;; 在环境中查找标识符的值
-    [appC (f a) 
-     (let ([fd (get-fundef f fds)])  ;; 查找函数定义
-       (interp (fdC-body fd)
-               (extend-env (bind (fdC-arg fd)
-                                 (interp a env fds))  ;; 创建干净的环境，并扩展环境
-                            mt-env)  ;; 使用空环境，确保无历史绑定
-               fds))]
-    [plusC (l r) (+ (interp l env fds) (interp r env fds))]  ;; 递归求值加法
-    [multC (l r) (* (interp l env fds) (interp r env fds))])) ;; 递归求值乘法
-```
+### ------------------------------------
 
-### 示例代码
 
-我们可以使用以下测试代码来验证解释器的行为：
 
-```scheme
-;; 测试 1
-(test (interp (plusC (numC 10) (appC 'const5 (numC 10)))
-              mt-env
-              (list (fdC 'const5 '_ (numC 5))))
-      15)
 
-;; 测试 2
-(test (interp (plusC (numC 10) (appC 'double (plusC (numC 1) (numC 2))))
-              mt-env
-              (list (fdC 'double 'x (plusC (idC 'x) (idC 'x)))))
-      16)
+### ------------------------------------
 
-;; 测试 3
-(test (interp (plusC (numC 10) (appC 'quadruple (plusC (numC 1) (numC 2))))
-              mt-env
-              (list (fdC 'quadruple 'x (appC 'double (appC 'double (idC 'x))))
-                    (fdC 'double 'x (plusC (idC 'x) (idC 'x)))))
-      22)
 
-;; 测试 4（检查未定义标识符的情况）
-(interp (appC 'f1 (numC 3))
-        mt-env
-        (list (fdC 'f1 'x (appC 'f2 (numC 4)))
-              (fdC 'f2 'y (plusC (idC 'x) (idC 'y)))))
-```
 
-### 总结
+### ------------------------------------
 
-通过引入环境模型，我们解决了替换模型中效率低下和复杂性的问题，并且在改进环境模型后避免了历史绑定污染的问题。这个环境模型的解释器确保每个函数调用都使用一个干净的环境，重现了替换模型的行为，同时避免了替换模型的效率问题。
 
-这个改进后的解释器不仅更符合直觉（通过字典查找绑定），还更高效，更接近实际编译器和解释器的实现方式。
+
+### ------------------------------------
+
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
+
+
+### ------------------------------------
+
